--- a/src/Containers/ArtistTable/artistTable.css
+++ b/src/Containers/ArtistTable/artistTable.css
@@ -2,11 +2,11 @@ table {
     width: 100%;
 }
 
-td {
+/* td {
     text-align: right;
     padding: 28px;
     border-bottom: var(--app-border);
-}
+} */
 
 thead > tr > td {
     font-size: 16px;
