modified artists table, added music player, song add form ,etc

--- a/src/Containers/SidebarContainer/sidebarContainer.css
+++ b/src/Containers/SidebarContainer/sidebarContainer.css
@@ -17,6 +17,10 @@
     text-decoration: none;
 }
 
+.logout-button {
+    height: 50px;
+}
+
 .stick-to-bottom {
     position: absolute;
     bottom: 0;
