--- a/src/Containers/SidebarContainer/sidebarContainer.css
+++ b/src/Containers/SidebarContainer/sidebarContainer.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     flex: 0.2;
+    height: 100vh;
+    box-sizing: border-box;
     padding-top: 32px;
     position: relative;
     border-right: var(--app-border);
