--- a/src/Containers/PageContainer/pageContainer.css
+++ b/src/Containers/PageContainer/pageContainer.css
@@ -2,7 +2,9 @@
     flex: 0.8;
     height: 100vh;
     position: relative;
-    overflow: scroll;
+    overflow: hidden;
+    box-sizing: border-box;
+    padding-bottom: 200px;
 }
 
 .header-heading {
